--- a/react  js요약/kiloMilesReactJs.html
+++ b/react  js요약/kiloMilesReactJs.html
@@ -46,7 +46,7 @@
                         />
                     </div>
                     <button onClick={reset}>Reset</button>
-                    <button onClick={onFlip}>Flipped</button>
+                    <button onClick={onFlip}>{flipped ? "Turn back": "Invert"}</button>
                 </div>
             )
         }
