--- a/react  js요약/converterPractice.html
+++ b/react  js요약/converterPractice.html
@@ -7,31 +7,109 @@
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script  type="text/babel">
-        function MinutesToHours(){
-
-        }
         function KmToMiles(){
+            const [amount, setAmount] = React.useState(0);
+            const [flipped, setFlipped] = React.useState(false);
 
+            const onChange = (event) => {
+                setAmount(event.target.value)
+            }
+            const reset = () => setAmount(0);
+            const onFlip = () => {
+                reset();
+                setFlipped((current) => !current);
+            }
+            return (
+                <div>
+                    <h1>Kilometers miles Converter</h1>
+                    <div>
+                        <label htmlFor="miles">Miles</label>
+                        <input
+                            value={flipped ? (amount/1.60934) : amount}
+                            id="miles"
+                            placeholder="Miles"
+                            type="number"
+                            onChange={onChange}
+                            disabled = {flipped===true}
+                        />
+                    </div>
+
+                    <div>
+                        <label htmlFor="kiliometers">Kilometers</label>
+                        <input
+                            value={flipped ? amount : amount*1.60934}
+                            id="kilometers"
+                            placeholder="Kilometer"
+                            type="number"
+                            onChange={onChange}
+                            disabled = {flipped===false}
+                        />
+                    </div>
+                    <button onClick={reset}>Reset</button>
+                    <button onClick={onFlip}>{flipped ? "Turn back": "Invert"}</button>
+                </div>
+            )
+        }
+        function MinutesToHours(){
+            const [amount, setAmount] = React.useState(0);
+            const [flipped, setFlipped] = React.useState(false);
+
+            const onChange = (event) => {
+                setAmount(event.target.value)
+            }
+            const reset = () => setAmount(0);
+            const onFlip = () => {
+                reset();
+                setFlipped((current) => !current);
+            }
+            return (
+                <div>
+                    <h1>Minutes to Hour Converter</h1>
+                    <div>
+                        <label htmlFor="minutes">Minutes</label>
+                        <input
+                            value={flipped ? amount*60 : amount}
+                            id="minutes"
+                            placeholder="Minutes"
+                            type="number"
+                            onChange={onChange}
+                            disabled = {flipped===true}
+                        />
+                    </div>
+
+                    <div>
+                        <label htmlFor="hours">Hours</label>
+                        <input
+                            value={flipped ? amount : Math.round(amount/60)}
+                            id="hours"
+                            placeholder="Hours"
+                            type="number"
+                            onChange={onChange}
+                            disabled = {flipped===false}
+                        />
+                    </div>
+                    <button onClick={reset}>Reset</button>
+                    <button onClick={onFlip}>{flipped ? "Turn back": "Invert"}</button>
+                </div>
+            )
         }
         function App(){
             const [index, setIndex] = React.useState("x");
             const onSelect = (event) => {
-                console.log(event.target.value);
+                setIndex(event.target.value);
             }
 
-            
             return (
                 <div>
-                    <h1>Super Converter</h1>
                     <select onChange={onSelect}>
                         <option value="x">Select your Unites</option>
-                        <option value="0">Minutes & Hours</option>
-                        <option value="1">Km & Miles</option>
+                        <option value="0">Km & Miles</option>
+                        <option value="1">Minutes & Hours</option>
                     </select>
                     <hr/>
                     {index === "x" ? "Please select your units" : null}
-                    {index === "0" ? <MinutesToHours/> : null}
-                    {index === "1" ? <KmToMiles/> : null}
+                    {index === "0" ? <KmToMiles/> : null}
+                    {index === "1" ? <MinutesToHours/> : null}
                 </div>
             )
         }
