--- a/react  js요약/basicJavascript.html
+++ b/react  js요약/basicJavascript.html
@@ -4,6 +4,7 @@
         <button id="btn">Click me</button>
     </body>
     <script>
+        console.log("hello");
         let counter  =0;
         const button  = document.getElementById("btn");
         const span = document.querySelector("span");
