--- a/react  js요약/secondReactJs.html
+++ b/react  js요약/secondReactJs.html
@@ -16,15 +16,15 @@
             );
         }
 
-        const Button = () => {
+        const Button = () => (
             <button style={{
-                backgourndColor : "tomato",
+                backgroundColor : "tomato",
             }}
             onClick={()=> console.log("i'm  clicked")}
             >
                 Click me
             </button>
-        }
+            );
 
         const Container = ()=> (
             <div>
