--- a/react  js요약/reactState.html
+++ b/react  js요약/reactState.html
@@ -15,7 +15,9 @@
                 setCounter((current) => current+1 );
                 // 현재 state 를 바탕으로 다음 state 를 계산해내고 싶다면
             }
+            console.log("hello");
             return(
+
                 <div>
                     <h3>Total clicks  :  {counter}</h3>
                     <button  onClick={onClick}>Click me</button>
